infra/openbao/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openbao
  namespace: openbao
spec:
  selector:
    app: openbao
  ports:
    - name: api
      port: 8200
      targetPort: api
    - name: cluster
      port: 8201
      targetPort: cluster
